<resources>
    <string name="app_name">Smart Farming</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="icon_logo">icon logo</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="msg_authenticating">Authenticating...</string>
    <string name="title_soil_monitoring">Soil Monitoring</string>
    <string name="title_crops">Crops</string>
    <string name="title_fertility_graph">Fertility</string>
    <string name="title_crop_suggestions">Crop Suggestions</string>
    <string name="title_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="degree">"\u2103"</string>
    <string name="samples">Samples</string>
    <string name="weather">Weather</string>
    <string name="soil_statistics">Soil Statistics</string>
    <string name="crop_name">CROP NAME</string>
    <string name="disease_prediction">Disease Prediction</string>
</resources>