<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_20"
    android:paddingEnd="@dimen/padding_20">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/icon_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <TextView
        android:id="@+id/login_email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/title_email"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="@dimen/size_0"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/bg_rect_stroke_5_grey"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_20"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_header" />

    <TextView
        android:id="@+id/login_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/title_password"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/margin_10"
        android:autofillHints="@null"
        android:background="@drawable/bg_rect_stroke_5_grey"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="@dimen/padding_20"
        android:paddingEnd="@dimen/padding_20"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_header" />


    <TextView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/bg_rect_solid_5"
        android:gravity="center"
        android:text="@string/action_sign_in"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password" />


</androidx.constraintlayout.widget.ConstraintLayout>